--- a/frontend/news-parser-frontend/package.json
+++ b/frontend/news-parser-frontend/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.25.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.3.0",
