added deploy settings + fixed testcontainers

--- a/newsparser/src/main/resources/application-docker.properties
+++ b/newsparser/src/main/resources/application-docker.properties
@@ -1,12 +1,11 @@
-server.port=${PORT:8085}
-spring.datasource.url=${DATABASE_URL1:jdbc:postgresql://localhost:5432/db}
+spring.datasource.url=${DATABASE_URL1:jdbc:postgresql://postgres_db:5432/db}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:root}
+server.port=${PORT:8085}
+server.max-http-header-size=10000000
 spring.datasource.driver-class-name=org.postgresql.Driver
-#server.servlet.context-path=/api
-#spring.datasource.data= classpath:/data.sql
-spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.generate-ddl=true
 spring.jackson.serialization.indent_output=true
