--- a/localDB/docker-compose.yml
+++ b/localDB/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     db:
         image: 'postgres:14.0'
         environment:
-            POSTGRES_DB:
-            POSTGRES_PASSWORD:
+            POSTGRES_DB: db
+            POSTGRES_PASSWORD: root
         ports:
             - '5432:5432'
         restart: always
