--- a/newsparser/news-parser-frontend/package.json
+++ b/newsparser/news-parser-frontend/package.json
@@ -19,12 +19,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8085/",
+  "proxy": "https://newsparser-mirea.herokuapp.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
