--- a/newsparser/news-parser-frontend/package.json
+++ b/newsparser/news-parser-frontend/package.json
@@ -24,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8085/",
   "eslintConfig": {
     "extends": [
       "react-app",
