--- a/newsparser/src/main/resources/application-docker.properties
+++ b/newsparser/src/main/resources/application-docker.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${DATABASE_PASSWORD:root}
 server.port=${PORT:8085}
 server.max-http-header-size=10000000
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.generate-ddl=true
